[package]
name = "imxrt-iomuxc"
version = "0.2.0" # Bumped when changing "imxrt106x" => "imxrt1060", "imxrt101x" => "imxrt1010"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
description = """Pad configuration interface for NXP i.MX RT processors.

Part of the imxrt-rs project.
"""
repository = "https://github.com/imxrt-rs/imxrt-iomuxc"
license = "MIT OR Apache-2.0"
keywords = ["imxrt", "nxp", "embedded", "no_std"]
categories = ["embedded", "no-std"]

[features]
imxrt1060 = []
imxrt1010 = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
